# EntrVista

./: .env.example  .gitignore  Cargo.toml  contex.md  prompt.md  tauri.conf.json
src/: audio.rs  db.rs  deepgram.rs  groq.rs  main.rs
ui/: app.js  index.html  style.css
