[package]
name = "Juda7w"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
cpal = "0.15"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1.0"
fastembed = "5"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
dotenv = "0.15"
anyhow = "1.0"
futures-util = "0.3"
bytes = "1.6"
url = "2.5"
tauri = { version = "1", features = ["api-all"] }

[build-dependencies]
tauri-build = { version = "1" }
